normalized models to a single Reading model; make better use of django rest framework;

--- a/apps/dashboard/templates/dashboard/index.html
+++ b/apps/dashboard/templates/dashboard/index.html
@@ -126,10 +126,10 @@
             }
 
             renderGasRecentChart();
-            window.setInterval(renderGasRecentChart, 30000);
+            //window.setInterval(renderGasRecentChart, 30000);
 
             renderElectricityRecentChart();
-            window.setInterval(renderElectricityRecentChart, 10000);
+            //window.setInterval(renderElectricityRecentChart, 10000);
         });
     </script>
 
