--- a/apps/dashboard/templates/dashboard/base.html
+++ b/apps/dashboard/templates/dashboard/base.html
@@ -4,10 +4,12 @@
 <html>
 <head>
     <title>{% trans "Energy dashboard" %}</title>
+    <meta charset="utf-8" />
+
     <script src="{% static 'dashboard/js/libs/moment-2.13.0.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/moment-timezone-0.5.3.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/chartsjs-2.0.0.js' %}" type="text/javascript"></script>
-    <script src="{% static 'dashboard/js/libs/jquery-2.2.3.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/libs/jquery-3.1.0.js' %}" type="text/javascript"></script>
 
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap-theme.min.css' %}">
