--- a/apps/dashboard/templates/dashboard/base.html
+++ b/apps/dashboard/templates/dashboard/base.html
@@ -9,13 +9,7 @@
     <script src="{% static 'dashboard/js/libs/moment-2.13.0.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/moment-timezone-0.5.3.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/chartsjs-2.0.0.js' %}" type="text/javascript"></script>
-    <!--<script src="{% static 'dashboard/js/libs/jquery-3.1.0.js' %}" type="text/javascript"></script>-->
-
-    <script src="https://npmcdn.com/react@15.3.0/dist/react.js"></script>
-    <script src="https://npmcdn.com/react-dom@15.3.0/dist/react-dom.js"></script>
-    <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
-    <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
-    <script src="https://npmcdn.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
+    <script src="{% static 'dashboard/js/libs/jquery-3.1.0.js' %}" type="text/javascript"></script>
 
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap-theme.min.css' %}">
