Initial commit on Backbone front-end (has some duplicated code for now)

--- a/apps/dashboard/static/dashboard/css/dashboard.css
+++ b/apps/dashboard/static/dashboard/css/dashboard.css
@@ -1,6 +1,3 @@
-.energy-dashboard .actual-usage .glyphicon-flash {
-    color: #008000;
-}
-.energy-dashboard .actual-usage .glyphicon-fire {
-    color: #ff0000;
+.widget {
+    margin: 10px;
 }
