--- a/apps/dashboard/templates/dashboard/base.html
+++ b/apps/dashboard/templates/dashboard/base.html
@@ -10,6 +10,8 @@
     <script src="{% static 'dashboard/js/libs/moment-timezone-0.5.3.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/chartsjs-2.0.0.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/jquery-3.1.0.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/libs/underscore-1.8.3.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/libs/backbone-1.3.3.js' %}" type="text/javascript"></script>
 
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap-theme.min.css' %}">
@@ -17,5 +19,14 @@
 </head>
 <body>
     {% block body %}{% endblock %}
+
+    <script src="{% static 'dashboard/js/backbone/collections/electricity_used_collection.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/backbone/collections/gas_used_collection.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'dashboard/js/backbone/views/app_view.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/backbone/views/electricity_graph_view.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/backbone/views/gas_graph_view.js' %}" type="text/javascript"></script>
+
+    <script src="{% static 'dashboard/js/backbone/init.js' %}" type="text/javascript"></script>
 </body>
 </html>
