--- a/apps/dashboard/templates/dashboard/index.html
+++ b/apps/dashboard/templates/dashboard/index.html
@@ -1,136 +1,12 @@
 {% extends 'dashboard/base.html' %}
 
 {% block body %}
-    <div class="energy-dashboard container-fluid">
-        <!--<div class="row actual-usage">-->
-            <!--<div class="col-md-12">-->
-                <!--<table class="table">-->
-                    <!--<tr>-->
-                        <!--<td>-->
-                            <!--<span class="glyphicon glyphicon-flash" aria-hidden="true"></span>-->
-                            <!--100 Watt-->
-                        <!--</td>-->
-                    <!--</tr>-->
-                    <!--<tr>-->
-                        <!--<td>-->
-                            <!--<span class="glyphicon glyphicon-fire" aria-hidden="true"></span>-->
-                            <!--3 m<sup>3</sup>-->
-                        <!--</td>-->
-                    <!--</tr>-->
-                <!--</table>-->
-            <!--</div>-->
-        <!--</div>-->
-
-        <div class="row">
-            <div class="col-md-12">
-                <br />
-                <canvas id="electricity-recent" height="60px"></canvas>
+    <script id="energy-graph-template" type="text/template">
+        <div class="panel panel-default widget">
+            <div class="panel-heading"><%= title %></div>
+            <div class="panel-body">
+                <canvas height="60px"></canvas>
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <canvas id="gas-recent" height="60px"></canvas>
-            </div>
-        </div>
-    </div>
-
-    <script type="text/javascript">
-        $(document).ready(function() {
-            var electricityRecentContext = document.getElementById('electricity-recent');
-                electricityRecentChart = null,
-                gasRecentContext = document.getElementById('gas-recent');
-                gasRecentChart = null
-
-            Chart.defaults.global.legend.display = false;
-            Chart.defaults.global.animation.duration = 0;
-
-            function renderElectricityRecentChart() {
-                $.get('/api/readings/electricity/used/hour/', function(data) {
-                    var dataLabels = [],
-                        dataPoints = [],
-                        data;
-
-                    for (var i=0; i < data.length; i++) {
-                        dataLabels.push(moment.utc(data[i].datetime).local().format('HH:ss'));
-                        dataPoints.push(data[i].costs);
-                   }
-
-                    data = {
-                        labels: dataLabels,
-                        datasets: [
-                            {
-                                backgroundColor: 'rgba(24,128,20,0.7)',
-                                data: dataPoints
-                            }
-                        ]
-                    };
-
-                    if (electricityRecentChart === null) {
-                        electricityRecentChart = new Chart(electricityRecentContext, {
-                            type: 'line',
-                            data: data,
-                            defaults: {
-                                global: {
-                                    legend: {
-                                        display: null
-                                    }
-                                }
-                            }
-                        });
-                    } else {
-                        electricityRecentChart.data = data;
-                        electricityRecentChart.update();
-                    }
-                });
-            }
-
-            function renderGasRecentChart() {
-                $.get('/api/readings/gas/used/hour/', function(data) {
-                    var dataLabels = [],
-                        dataPoints = [],
-                        data;
-
-                    for (var i=0; i < data.length; i++) {
-                        dataLabels.push(moment.utc(data[i].datetime).local().format('HH:ss'));
-                        dataPoints.push(data[i].costs);
-                   }
-
-                    data = {
-                        labels: dataLabels,
-                        datasets: [
-                            {
-                                backgroundColor: 'rgba(209,25,50,0.7)',
-                                data: dataPoints
-                            }
-                        ]
-                    };
-
-                    if (gasRecentChart === null) {
-                        gasRecentChart = new Chart(gasRecentContext, {
-                            type: 'line',
-                            data: data,
-                            defaults: {
-                                global: {
-                                    legend: {
-                                        display: null
-                                    }
-                                }
-                            }
-                        });
-                    } else {
-                        gasRecentChart.data = data;
-                        gasRecentChart.update();
-                    }
-                });
-            }
-
-            renderGasRecentChart();
-            //window.setInterval(renderGasRecentChart, 30000);
-
-            renderElectricityRecentChart();
-            //window.setInterval(renderElectricityRecentChart, 10000);
-        });
     </script>
-
 {% endblock %}
