--- a/apps/dashboard/templates/dashboard/base.html
+++ b/apps/dashboard/templates/dashboard/base.html
@@ -9,12 +9,13 @@
     <script src="{% static 'dashboard/js/libs/moment-2.13.0.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/moment-timezone-0.5.3.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/chartsjs-2.0.0.js' %}" type="text/javascript"></script>
-    <script src="{% static 'dashboard/js/libs/jquery-3.1.0.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/libs/jquery-2.2.4.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/underscore-1.8.3.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/libs/backbone-1.3.3.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
 
     <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap-theme.min.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap-theme.min.css' %}">-->
     <link rel="stylesheet" href="{% static 'dashboard/css/dashboard.css' %}">
 </head>
 <body>
