timezone related fixed; disabled days display untill its fixed;

--- a/apps/dashboard/templates/dashboard/index.html
+++ b/apps/dashboard/templates/dashboard/index.html
@@ -6,7 +6,7 @@
             <div class="panel-heading">
                 <div class="btn-group date-period" role="group">
                   <button type="button" data-period='hours' class="btn btn-default active">Uren</button>
-                  <button type="button" data-period='days' class="btn btn-default">Dagen</button>
+                  <!--<button type="button" data-period='days' class="btn btn-default">Dagen</button>-->
                   <button type="button" data-period='months' class="btn btn-default">Maanden</button>
                 </div>
 
