Renamed ElectricityActual to the more generic EnergyActual; some progress on implementing actual readings;

--- a/apps/dashboard/templates/dashboard/base.html
+++ b/apps/dashboard/templates/dashboard/base.html
@@ -22,6 +22,7 @@
     {% block body %}{% endblock %}
 
     <script src="{% static 'dashboard/js/backbone/collections/electricity_used_collection.js' %}" type="text/javascript"></script>
+    <script src="{% static 'dashboard/js/backbone/collections/electricity_used_actual_collection.js' %}" type="text/javascript"></script>
     <script src="{% static 'dashboard/js/backbone/collections/gas_used_collection.js' %}" type="text/javascript"></script>
 
     <script src="{% static 'dashboard/js/backbone/views/app_view.js' %}" type="text/javascript"></script>
