--- a/apps/dashboard/templates/dashboard/index.html
+++ b/apps/dashboard/templates/dashboard/index.html
@@ -1,32 +1,40 @@
-{% extends 'dashboard/base.html' %}
+{% load staticfiles i18n %}
 
-{% block body %}
-    <script id="energy-graph-wrapper-template" type="text/template">
-        <div class="energy-graph-wrapper panel panel-primary">
-            <div class="panel-heading">
-                <div class="btn-group date-period" role="group">
-                  <button type="button" data-period='hours' class="btn btn-default active">Uren</button>
-                  <button type="button" data-period='days' class="btn btn-default">Dagen</button>
-                  <button type="button" data-period='months' class="btn btn-default">Maanden</button>
-                </div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>{% trans "Energy dashboard" %}</title>
+        <meta charset="utf-8" />
 
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default btn-sm previous-date">
-                        <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
-                    </button>
-                    <button type="button" class="btn btn-default btn-sm next-date">
-                        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-                    </button>
-                </div>
+        <script src="{% static 'dashboard/js/libs/moment-2.14.1.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/libs/moment-timezone-0.5.5.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/libs/chartsjs-2.5.0.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/libs/jquery-2.2.4.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/libs/underscore-1.8.3.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/libs/backbone-1.3.3.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
 
-                <span class="current-date">&nbsp;&nbsp;29 augustus</span>
+        <link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap.min.css' %}">
+        <!--<link rel="stylesheet" href="{% static 'dashboard/bootstrap/css/bootstrap-theme.min.css' %}">-->
+        <link rel="stylesheet" href="{% static 'dashboard/css/dashboard.css' %}">
+    </head>
 
-                <div class="btn-group data-type" role="group">
-                    <button type="button" data-type="usage" class="btn btn-default">Verbruik</button>
-                  <button type="button" data-type="costs" class="btn btn-default active">Kosten</button>
-                </div>
-            </div>
-            <div class="panel-body"></div>
-        </div>
-    </script>
-{% endblock %}
+    <body>
+        {% include 'dashboard/backbone_templates/index.tpl' %}
+        {% include 'dashboard/backbone_templates/report.tpl' %}
+        {% include 'dashboard/backbone_templates/dashboard.tpl' %}
+
+        <script src="{% static 'dashboard/js/backbone/collections/electricity_used_collection.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/collections/electricity_used_actual_collection.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/collections/gas_used_collection.js' %}" type="text/javascript"></script>
+
+        <script src="{% static 'dashboard/js/backbone/views/dashboard_view.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/views/electricity_actual_view.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/views/report_view.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/views/electricity_graph_view.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/views/gas_graph_view.js' %}" type="text/javascript"></script>
+        <script src="{% static 'dashboard/js/backbone/views/app_view.js' %}" type="text/javascript"></script>
+
+        <script src="{% static 'dashboard/js/backbone/init.js' %}" type="text/javascript"></script>
+    </body>
+</html>
